# credits

./: .gitignore  .rusty-hook.toml  README.md  test_script.sh
authorization_generator/: Cargo.toml
authorization_generator/src/: config.rs  lib.rs
authorization_generator/src/tests/: mod.rs  test_bond_public.rs  test_fee_public.rs  test_transfer_public.rs
request_generator/: Cargo.toml
request_generator/src/: config.rs  lib.rs
request_generator/src/tests/: mod.rs  test_bond_public.rs  test_fee_public.rs  test_transfer_public.rs
