[package]
name = "request_generator"
version = "0.1.0"
keywords = [
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [
    "cryptography",
    "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-console-account]
# path = "../../snarkVM_2/console/account"
version = "=3.8.0"

[dependencies.snarkvm-console-network]
# path = "../../snarkVM_2/console/network"
version = "=3.8.0"

[dependencies.snarkvm-console-program]
# path = "../../snarkVM_2/console/program"
version = "=3.8.0"

[dependencies.snarkvm-console-types]
# path = "../../snarkVM_2/console/types"
version = "=3.8.0"

[dependencies.anyhow]
version = "1.0.72"

[dependencies.rand]
version = "0.8"

[dependencies.rand_chacha]
version = "0.3.0"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true
